--- a/public/css/404game.css
+++ b/public/css/404game.css
@@ -1,5 +1,27 @@
 @import url("https://fonts.googleapis.com/css?family=VT323");
 
+@-webkit-keyframes logo-ani{
+    50%{-webkit-transform: scale(1.3,1.3);}
+   100%{-webkit-transform: scale(1.0,1.0);}
+ }
+
+ @keyframes logo-ani{
+    50%{transform: scale(1.3,1.3);}
+   100%{transform: scale(1.0,1.0);}
+ }
+
+#menu #start-button,
+#menu #restart-button,
+#speed-value{
+    -webkit-animation: logo-ani 1000ms linear infinite;
+            animation: logo-ani 1000ms linear infinite;
+}
+
+#start-button,
+#restart-button {
+    cursor: pointer;
+}
+
 ::selection {
     color:#FFFFFF; 
     background:transparent;
@@ -21,6 +43,7 @@
 .game-header{
     font-size: 0;
 }
+
 canvas{
     display: block;
     border-style: solid;
@@ -34,8 +57,9 @@ canvas:focus{
 /* Top Styles */
 .game h1{
     display: inline-block;
-    font-size: 32px;
+    font-size: 40px;
     color: #4D5139;
+    font-family: "VT323" !important;
 }
 .score{
     display: block;
