--- a/public/fonts/pan-sans/stylesheet.css
+++ b/public/fonts/pan-sans/stylesheet.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'pansansmedium';
+    font-family: 'Pan Sans';
     src: url('pansans-webfont.eot');
     src: url('pansans-webfont.eot?#iefix') format('embedded-opentype'),
          url('pansans-webfont.woff2') format('woff2'),
