--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -13,7 +13,7 @@ body:lang(zh-CN){
 }
 
 body:lang(en) {
-	font-family: 'Roboto', sans-serif;
+	font-family: Calibri, -apple-system, Arial, sans-serif;
 	color: #0D5661;
 	background-color: #fffffb;
 	margin-top: 18px;
@@ -108,7 +108,7 @@ dd {
 }
 
 .title {
-	font-family: 'Noto Serif', serif;
+	font-family: Montserrat, serif;
 	text-transform: uppercase;
 	border-bottom: 3px solid #268785;
 	margin-bottom: 0px;
@@ -169,7 +169,7 @@ dd {
 }
 
 #footer {
-	font-family: Georgia, -apple-system, 'Nimbus Roman No9 L', Arial, sans-serif;
+	font-family: Calibri, -apple-system, Arial, sans-serif;
 }
 
 
@@ -348,7 +348,7 @@ dd {
 	cursor: pointer;
 	width: 60%;
 	/* height: 50px; */
-	font-family: 'Roboto', Georgia, -apple-system, 'Nimbus Roman No9 L', Arial, sans-serif;
+	font-family: Calibri, -apple-system, Arial, sans-serif;
 	height: 22px;
   }
 
