--- a/public/fonts/pan-sans/stylesheet.css
+++ b/public/fonts/pan-sans/stylesheet.css
@@ -12,5 +12,6 @@
          url('pansans-webfont.svg#pansansmedium') format('svg');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 
 }
