--- a/public/icomoon/style.css
+++ b/public/icomoon/style.css
@@ -7,7 +7,7 @@
     url('fonts/icomoon.svg?yfxtz#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 
 [class^="icon-"], [class*=" icon-"] {
